--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,9 +9,9 @@ author_profile: true
   <div class="wordwrap">You can find some of my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
-{% include base_path %}
+<!-- {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
+<!-- New style rendering if publication categories are defined
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
@@ -30,7 +30,39 @@ author_profile: true
   {% for post in site.publications reversed %}
     {% include archive-single.html %}
   {% endfor %}
-{% endif %}
+{% endif %} -->
+
+<h1>Publications</h1>
+
+<ul>
+  <li>Shardul Agrawala, Damien Dussaux and Norbert Monti (2022), "<em>What Is Past Is Prologue: Learning from the Global Financial Crisis to Green the COVID-19 Recovery</em>", <strong>International Review of Environmental and Resource Economics</strong></li>
+
+<h1>OECD Contributions</h1>
+
+  <li>Agrawala, S., D. Dussaux and N. Monti (2020), "<em>What policies for greening the crisis response and economic recovery? Lessons learned from past green stimulus measures and implications for the COVID-19 crisis</em>", <strong>OECD Environment Working Papers</strong>, No. 164, OECD Publishing, Paris, 
+    <a href="https://doi.org/10.1787/c50f186f-en" target="_blank">https://doi.org/10.1787/c50f186f-en</a>.
+  </li>
+  
+  <li>OECD (2022), <em>Global Plastics Outlook: Economic Drivers, Environmental Impacts and Policy Options</em>, OECD Publishing, Paris, 
+    <a href="https://doi.org/10.1787/de747aef-en" target="_blank">https://doi.org/10.1787/de747aef-en</a>.
+  </li>
+  
+  <li>OECD (2022), <em>Global Plastics Outlook: Policy Scenarios to 2060</em>, OECD Publishing, Paris, 
+    <a href="https://doi.org/10.1787/aa1edf33-en" target="_blank">https://doi.org/10.1787/aa1edf33-en</a>.
+  </li>
+  
+  <li>OECD (2023), <em>Towards a National Circular Economy Strategy for Hungary</em>, OECD Publishing, Paris, 
+    <a href="https://doi.org/10.1787/1178c379-en" target="_blank">https://doi.org/10.1787/1178c379-en</a>.
+  </li>
+  
+  <li>OECD (2022), "<em>Closing the loop in the Slovak Republic: A roadmap towards circularity for competitiveness, eco-innovation and sustainability</em>", <strong>OECD Environment Policy Papers</strong>, No. 30, OECD Publishing, Paris, 
+    <a href="https://doi.org/10.1787/acadd43a-en" target="_blank">https://doi.org/10.1787/acadd43a-en</a>.
+  </li>
+  
+  <li><em>Modelling plastics in ENV-Linkages: A novel approach to projecting plastics use and waste</em>, 
+    <a href="https://www.oecd.org/environment/plastics/Technical-Report-Modelling-plastics-in-ENV-Linkages.pdf" target="_blank">https://www.oecd.org/environment/plastics/Technical-Report-Modelling-plastics-in-ENV-Linkages.pdf</a>.
+  </li>
+</ul>
 
 
 
